<resources>
    <string name="app_name">Saveoury</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_post">New Post</string>
    <string name="title_profile">Profile</string>
    <string name="title">Saveoury</string>
    <string name="masuk">Masuk</string>
    <string name="mari_saling_berbagi_sesama_kita">Mari saling berbagi sesama kita.</string>
    <string name="email">Email</string>
    <string name="masukkan_email_kamu_disini">Masukkan email kamu disini</string>
    <string name="password">Password</string>
    <string name="masukkan_password_kamu_disini">Masukkan password kamu disini</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_lengkapmu_disini">Masukkan nama lengkapmu disini</string>
    <string name="lanjut">Lanjut</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukkan_sekali_lagi_password_kamu_disini">Masukkan sekali lagi password kamu disini</string>
    <string name="berbagi_tak_perlu_menunggu_kaya">Berbagi tak perlu menunggu kaya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="pastikan_terisi_secara_benar_ya">Pastikan terisi secara benar ya</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="masukkan_nomor_hp">Masukkan nomor hp kamu disini</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="masukkan_alamat_rumah_kamu_disini">Masukkan alamat rumah kamu disini</string>
    <string name="kota">Kota</string>
    <string name="temukan_kotamu_disini">Temukan kotamu disini</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="email_not_valid">Email tidak valid!</string>
    <string name="password_not_valid">Minimal 8 karakter!</string>
    <string name="password_not_same">Password tidak sama!</string>
    <string name="back_button">back_button</string>
    <string name="riwayat">Riwayat Postingan</string>
    <string name="masih_kosong">Masih kosong</string>
    <string name="keluar">Keluar</string>
    <string name="lokasi_kamu">Lokasi kamu</string>
    <string name="jalan_kakap_no_7">Jalan Kakap, No.7</string>
    <string name="deskripsi_postingan">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="tersedia">Tersedia</string>
    <string name="nama_makanan">Nama makanan</string>
    <string name="image_post">Image Post</string>
    <string name="ketuk_untuk_lihat_detail">Ketuk untuk lihat detail</string>
    <string name="belum_ada_yang_berbagi_makanan_saat_ini">Belum ada yang berbagi makanan saat ini.</string>
    <string name="hari_ini_masak_apa_bund_bagiin_yuk">Hari ini masak apa bund? Bagiin yuk!</string>
    <string name="upload_foto_makanan_disini">Upload foto makanan disini</string>
    <string name="deskripsikan_makanan">Deskripsikan makananmu</string>
    <string name="makanan_berat">Makanan Berat</string>
    <string name="makanan_ringan">Makanan Ringan</string>
    <string name="klik_disini_untuk_ubah_profil">Klik disini untuk ubah profil</string>
    <string name="foto_makanan">Foto makanan</string>
    <string name="status_makanan">Status makanan</string>
    <string name="waktu_post">Waktu post</string>
    <string name="request">Request</string>
    <string name="alamat_rumah2">Alamat Rumah | </string>
    <string name="kontak_pemilik_makanan">Kontak Pemilik Makanan</string>
    <string name="nomor_hp_wa">Nomor HP/WA    | </string>
    <string name="daftar_request">Daftar Request</string>
    <string name="status_berbagi">Status berbagi </string>
    <string name="kamu_belum_me_request_makanan_ini_yakin_ga_mau_cobain">Kamu belum me-request makanan ini. Yakin ga mau cobain?</string>
    <string name="masih_menunggu_respons_dari_pemilik_makanan_sabar_dulu_yaa">Masih menunggu respons dari pemilik makanan. Sabar dulu yaa!</string>
    <string name="sudah_tidak_tersedia_lagi_move_on_ya">Sudah tidak tersedia lagi. Move on ya!</string>
    <string name="masukkan_kabupaten_kota_tempat_kamu_tinggal">Masukkan kabupaten/kota tempat kamu tinggal</string>
    <string name="update_data">Update Data</string>
    <string name="batalkan">Batalkan</string>
    <string name="diizinkan">Diizinkan</string>
    <string name="menunggu_konfirmasi">Menunggu Konfirmasi</string>
</resources>