<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="12dp"
        android:paddingVertical="30dp"
        android:orientation="vertical"
        >
        <include android:id="@+id/profile" layout="@layout/content_profile" />
    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/nama_lengkap"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="6dp"
        />
    <EditText
        android:id="@+id/et_nama_lengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        android:hint="@string/masukkan_nama_lengkapmu_disini"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/email"
            android:fontFamily="@font/poppins"
            android:layout_marginBottom="6dp"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:hint="@string/masukkan_email_kamu_disini"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/nomor_hp"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="6dp"
        />
    <EditText
        android:id="@+id/et_nomor_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        android:hint="@string/masukkan_nomor_hp"
        android:inputType="phone"
        android:layout_marginBottom="16dp"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/alamat_rumah"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="6dp"
        />
    <EditText
        android:id="@+id/et_alamat_rumah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        android:hint="@string/masukkan_alamat_rumah_kamu_disini"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:padding="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/kota"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="6dp"
        />
    <EditText
        android:id="@+id/et_kota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        android:hint="@string/masukkan_kabupaten_kota_tempat_kamu_tinggal"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:padding="10dp" />
    <Button
        android:id="@+id/btn_submit"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary_variant"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/update_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_cancel"
        android:backgroundTint="@color/black_opacity"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/batalkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    </ScrollView>