<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kontak_pemilik_makanan"
        android:fontFamily="@font/poppins_medium"
        android:textSize="24sp"
        android:textColor="@color/primary_variant"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp"
        android:padding="8dp"
        >
        <LinearLayout
            android:background="@drawable/border_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_rumah2"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                />
            <TextView
                android:id="@+id/tv_address_user"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/alamat_rumah"
                />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/border_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor_hp_wa"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                />
            <TextView
                android:id="@+id/tv_phone_number_user"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:text="@string/nomor_hp"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>