<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_variant"
    tools:context=".ui.main.post.PostFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        >
        <include android:id="@+id/image_container" layout="@layout/content_add_image" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_below="@+id/image_container"
            android:id="@+id/et_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_makanan"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:layout_marginTop="24dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_below="@+id/et_food_name"
            android:id="@+id/et_food_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsikan_makanan"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:layout_marginTop="12dp"
            />
        <RadioGroup
            android:id="@+id/radio_category"
            android:layout_below="@id/et_food_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_berat"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/makanan_berat"/>
            <RadioButton android:id="@+id/radio_ringan"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/makanan_ringan"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_submit"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:layout_below="@id/radio_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="12dp"
            />
    </RelativeLayout>
</ScrollView>